crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/one_chunk_custom_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
assertion_line: 99
expression: err
---
error: Reserved identifier
  |
6 |     let int = 0
  |         ^^^ int
